--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -29,8 +29,9 @@
     <ul>
       <li  align="left"> Data visualization, Analytics, Webscraping  </li>
     </ul>
-    <p align="justify"> An Online forecasting algorithm was developed by combining ARIMA, PROPHET,
-      and Holt-Winters + GARCH for predicting future number of COVID-19 cases in Nigeria.</p>
+    <p align="justify"> An Online Ensemble Forecasting algorithm was developed by combining ARIMA, Prophet,
+      and Holt-Winters + GARCH for predicting future number of COVID-19 cases in Nigeria. As at the time of
+    writing, it has achieved a 100% hit-rate</p>
     <a class="project-link" href="https://github.com/kbmajeed/nigeria_covid19">Check it out</a>
   </div>
 </div>
