--- a/_includes/about.html
+++ b/_includes/about.html
@@ -4,12 +4,12 @@
 </div>
 
    <div class="user">
-   <p> I’m a Robotics enthusiast. From Unmanned vehicles to Robotic surgery to Smart Vision Systems, 
+   <p> I am a Machine Learning Specialist. From Smart Vision Systems, to Robotic Surgery, to Customer Analytics, 
     I have passion for every system that can sense, think, and act on its own.
     My experience ranges from Signals and Communications (B.Eng), Systems, Robotics and Control theory (M.Sc), 
-    and Computer Science with a specialization in Machine learning (2nd M.Sc). I’ve had the opportunity to work with 
-    Ultrasonic and EMAT technologies for Oil and Gas In-line inspection. Similarly, I have experience in the 
-    communcations industry, academia, and once helped develop software for a medical facility.</p>
+    and Computer Science with a specialization in Machine learning (2nd M.Sc) from GeorgiaTech. 
+    I have had the opportunity to work with Ultrasonic, EMAT, and MFL technologies for Oil and Gas In-line inspection. 
+    Similarly, I have experience in the telecommuncations industry, academia, and once helped develop software for a medical facility.</p>
    </div>
 
    <div class="user">
