--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -8,6 +8,42 @@
     <img alt="mountains" src="{{ "/assets/img/nvidia_dli.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
+    <h3 align="center"> Analysis and Evaluation of Machine Learning Algorithms </h3>
+    <ul>
+      <li  align="left"> Sklearn, MLRose, Python, OpenAI-Gym, GCP </li>
+    </ul>
+    <p align="justify"> This project involves a series of thorough analysis of Machine Learning Algorithms
+    for Supervised, Unsupervised, and Reinforcement Learning. Supervised Algorithms covered include: Neural Networks,
+    Decision Trees, K-Nearest Neighbors, Support Vector Machines, Boosted-Decision Trees. Unsupervised Algorithms
+    covered include: Principal Component Analysis, Independent Component Analysis, ISOMap, Randomized Projections, 
+      K-Means, Gaussian Mixture Models. Randomized Optimization include: Randomized Hill Climbing, Simulated Annealing,
+    Genetic Algorithms, and MIMIC. Reinforcement Learning Algorithms include: Policy Iteration, Value Iteration, and Q-Learning. </p>
+    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Private</a>
+  </div>
+</div>
+
+
+<div class="user-projects">
+  <div class="images-right">
+    <img alt="mountains" src="{{ "/assets/img/nvidia_dli.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents">
+    <h3 align="center"> Nvidia Deep Learning Institute </h3>
+    <ul>
+      <li  align="left"> NVIDIA GTC 2021 </li>
+    </ul>
+    <p align="justify"> This is an annual event organized by Nvidia. Here, I took the course titled "Building Transformer Based
+      Natural Language Applications." Covered NLP Embeddings (Word2Vec, RNN, and Transformers), Self-Attention, Self-supervision 
+      (BERT, Megatron, etc), NLP Models (text classification, NER, Question Answering), and Deployment & Inferencing with Nvidia NeMo and Triton</p>
+    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Private</a>
+  </div>
+</div>
+
+<div class="user-projects">
+  <div class="images-right">
+    <img alt="mountains" src="{{ "/assets/img/nvidia_dli.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents">
     <h3 align="center"> Nvidia Deep Learning Institute </h3>
     <ul>
       <li  align="left"> NVIDIA GTC 2020 </li>
