--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -5,7 +5,7 @@
 
 <div class="user-projects">
   <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/nvidia_dli.jpg" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/facenet.PNG" | prepend: site.baseurl }}" /> 
   </div>
   <div class="contents">
     <h3 align="center"> Analysis and Evaluation of Machine Learning Algorithms </h3>
