--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -12,10 +12,9 @@
     <ul>
       <li  align="left"> Sklearn, MLRose, Python, OpenAI-Gym, GCP </li>
     </ul>
-    <p align="justify"> This project involves a series of thorough analysis of Machine Learning Algorithms
-    for Supervised, Unsupervised, and Reinforcement Learning. Supervised Algorithms covered include: NNs,
-    DTrees, K-NNs, SVMs, Boosted-DTrees. Unsupervised Algorithms covered include: PCA, ICA, ISOMap, Randomized Projections, 
-    K-Means, GMMs. Randomized Optimization include: Randomized Hill Climbing, Simulated Annealing, Genetic Algorithms, and MIMIC. 
+    <p align="justify"> This project involves a series of thorough analysis of Machine Learning Algorithms. Supervised Algorithms covered include: NNs,
+    DTrees, K-NNs, SVMs, Boosted-DTrees. Unsupervised include: PCA, ICA, ISOMap, Randomized Projections, K-Means, GMMs. 
+      Randomized Optimization include: Randomized Hill Climbing, Simulated Annealing, Genetic Algorithms, and MIMIC. 
       Reinforcement Learning Algorithms include: Policy Iteration, Value Iteration, and Q-Learning. </p>
     <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Private</a>
   </div>
