--- a/_includes/about.html
+++ b/_includes/about.html
@@ -4,7 +4,8 @@
 </div>
 
    <div class="user">
-   <p> I am a Machine Learning Specialist. From Smart Vision Systems, to Robotic Surgery, to Customer Analytics, 
+   <p> I am a Machine Learning Specialist and currently a Data Scientist with Boston Consulting Group. 
+    From Smart Vision Systems, to Robotic Surgery, to Customer Analytics, 
     I have passion for every system that can sense, think, and act on its own.
     My experience ranges from Signals and Communications (B.Eng), Systems, Robotics and Control theory (M.Sc), 
     and Computer Science with a specialization in Machine learning (2nd M.Sc) from GeorgiaTech. 
