--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,7 +14,7 @@
         <a class="link" href="#about" data-scroll>Me</a>
         <a class="link" href="#projects" data-scroll>Projects</a>
         <a class="link" href="https://kbmajeed.github.io/BlogPosts/">Blog</a>
-        <a class="link" href="https://kbmajeed.github.io/Kbmajeed_CV_Resume/">CV</a>
+        <a class="link" href="https://kbmajeed.github.io/Kbmajeed_CV_Resume/#portrait">CV</a>
       </div>
   </div>
   <a class="down" href="#about" data-scroll><i class="icon fa fa-chevron-down" aria-hidden="true"></i></a>
