--- a/_includes/about.html
+++ b/_includes/about.html
@@ -4,13 +4,19 @@
 </div>
 
    <div class="user">
-   <p> I am a Machine Learning Specialist and currently a Data Scientist with Boston Consulting Group. 
-    From Smart Vision Systems, to Robotic Surgery, to Customer Analytics, 
-    I have passion for every system that can sense, think, and act on its own.
-    My experience ranges from Signals and Communications (B.Eng), Systems, Robotics and Control theory (M.Sc), 
+   <p> I am a Machine Learning Specialist and Data Science Consultant. 
+    From Smart Vision Systems, to Robotic Surgery, to Customer Analytics, I have interests in all systems that can sense, think, and act on their own.
+    I specialize in building data‑driven solutions utilizing advanced machine learning and optimization techniques to connect man, machines, and
+    business. 
+    
+    My work experience covers manufacturing, consumer goods, industrial goods, operations, and retail industries. I have built ML & Analyt‑
+    ics solutions, for targeted marketing, marketing measurement and experimentation, demand forecasting, industrial plant setpoint optimization,
+    predictive maintenance, and complexity reduction across different industries. I have also worked on oil and gas asset integrity solutions - 
+    leveraging Ultrasonic, EMAT, and MFL technologies for Oil and Gas In-line inspection, optical character recognition for a medical facility, 
+    2G/3G/4G telecommunications engineering, and academic research in unmanned autonomous aerial vehicles.
+    
+    My academic experience ranges from Signals and Communications (B.Eng), Systems, Robotics and Control theory (M.Sc), 
     and Computer Science with a specialization in Machine learning (2nd M.Sc) from GeorgiaTech. 
-    I have had the opportunity to work with Ultrasonic, EMAT, and MFL technologies for Oil and Gas In-line inspection. 
-    Similarly, I have experience in the telecommuncations industry, academia, and once helped develop software for a medical facility.</p>
    </div>
 
    <div class="user">
