--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -6,6 +6,24 @@
 
 <div class="user-projects">
   <div class="images-right">
+    <img alt="mountains" src="{{ "/assets/img/art_nst.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents">
+    <h3 align="center"> Consulting Projects </h3>
+    <ul>
+      <li  align="left"> Advanced Analytics and ML Consulting Projects </li>
+    </ul>
+    <p align="justify"> Targeted Marketing, Demand Forecasting, Marketing Analytics, Marketing A/B Experimentation, 
+      SKU Rationalization, Complexity Reduction, Predictive Maintenance, Setpoint Optimization, 
+      Data Integration Pipelines, Climate Sustainability Analytics.
+    </p>
+    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Private</a>
+  </div>
+</div>
+
+
+<div class="user-projects">
+  <div class="images-right">
     <img alt="mountains" src="{{ "/assets/img/nvidia_dli.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
