--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -9,6 +9,23 @@
     <img alt="mountains" src="{{ "/assets/img/art_nst.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
+    <h3 align="center"> Vector Embeddings </h3>
+    <ul>
+      <li  align="left"> Python, Keras, Pytorch, AWS, PgVector, Pinecone </li>
+    </ul>
+    <p align="justify"> Extracts embeddings from images using a simple convolutional neural network (Keras), embeddings are then saved in a vector database.
+      The vector database (pgVector, pinecone) can then be queried for semantic search.
+    </p>
+    <a class="project-link" href="https://github.com/kbmajeed/vizsearch/tree/feature/refactor">Check it out</a>
+  </div>
+</div>
+
+
+<div class="user-projects">
+  <div class="images-right">
+    <img alt="mountains" src="{{ "/assets/img/art_nst.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents">
     <h3 align="center"> Consulting Projects </h3>
     <ul>
       <li  align="left"> Advanced Analytics and ML Consulting Projects </li>
