--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -6,7 +6,7 @@
 
 <div class="user-projects">
   <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/art_nst.jpg" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{"/assets/img/cats.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
     <h3 align="center"> Vector Embeddings </h3>
