--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -9,7 +9,7 @@
     <img alt="mountains" src="{{"/assets/img/cats.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
-    <h3 align="center"> Vector Embeddings </h3>
+    <h3 align="center"> VizSearch for Image Similarity and Retrieval </h3>
     <ul>
       <li  align="left"> Python, Keras, Pytorch, AWS, PgVector, Pinecone </li>
     </ul>
