--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
       <div class="header-icons">
         <a aria-label="Send email" href="mailto:kbmajeed1@gmail.com"><i class="icon fa fa-envelope"></i></a>
         <a aria-label="My Twitter" target="_blank" href="https://twitter.com/kbmajeed"><i class="icon fa fa-twitter" aria-hidden="true"></i></a>
-        <a aria-label="My Google Plus" target="_blank" href="https://linkedin.com/in/kbmaajeed"><i class="icon fa fa-linkedin" aria-hidden="true"></i></a>
+        <a aria-label="My Google Plus" target="_blank" href="https://linkedin.com/in/"><i class="icon fa fa-linkedin" aria-hidden="true"></i></a>
         <a aria-label="My Github" target="_blank" href="https://github.com/kbmajeed"><i class="icon fa fa-github-alt" aria-hidden="true"></i></a>
       </div>
       <div class="header-links">
