--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
       </h1>
       <div class="header-icons">
         <a aria-label="Send email" href="mailto:kbmajeed1@gmail.com"><i class="icon fa fa-envelope"></i></a>
-        <a aria-label="My Twitter" target="_blank" href="https://twitter.com/kbmajeed"><i class="icon fa fa-twitter" aria-hidden="true"></i></a>
+        <!-- <a aria-label="My Twitter" target="_blank" href="https://twitter.com/kbmajeed"><i class="icon fa fa-twitter" aria-hidden="true"></i></a> -->
         <a aria-label="My Google Plus" target="_blank" href="https://linkedin.com/in/"><i class="icon fa fa-linkedin" aria-hidden="true"></i></a>
         <a aria-label="My Github" target="_blank" href="https://github.com/kbmajeed"><i class="icon fa fa-github-alt" aria-hidden="true"></i></a>
       </div>
@@ -14,7 +14,7 @@
         <a class="link" href="#about" data-scroll>Me</a>
         <a class="link" href="#projects" data-scroll>Projects</a>
         <a class="link" href="https://kbmajeed.github.io/BlogPosts/">Blog</a>
-        <a class="link" href="https://kbmajeed.github.io/Kbmajeed_CV_Resume/#portrait">CV</a>
+        <!-- <a class="link" href="https://kbmajeed.github.io/Kbmajeed_CV_Resume/#portrait">CV</a> -->
       </div>
   </div>
   <a class="down" href="#about" data-scroll><i class="icon fa fa-chevron-down" aria-hidden="true"></i></a>
