--- a/_includes/about.html
+++ b/_includes/about.html
@@ -5,13 +5,14 @@
 
    <div class="user">
    <p> I am a Machine Learning Specialist and Data Science Consultant. 
-    From Smart Vision Systems, to Robotic Surgery, to Customer Analytics, I have interests in all systems that can sense, think, and act on their own.
+    From Smart Vision Systems, to Geospatial solutions, to Robotic Surgery, to Customer Analytics, I have interests in all systems that can sense, think, and act on their own.
     I specialize in building data‑driven solutions utilizing advanced machine learning and optimization techniques to connect man, machines, and
     business. 
     
-    My work experience covers manufacturing, consumer goods, industrial goods, operations, and retail industries. I have built ML & Analyt‑
+    My work experience covers manufacturing, consumer goods, industrial goods, operations, retail industries, and climate sustainability. I have built ML & Analyt‑
     ics solutions, for targeted marketing, marketing measurement and experimentation, demand forecasting, industrial plant setpoint optimization,
-    predictive maintenance, and complexity reduction across different industries. I have also worked on oil and gas asset integrity solutions - 
+    predictive maintenance, and complexity reduction across different industries. Significant expereince creating Carbon models for mangrove and terrestrial ecosystems utilizing Geospatial science and Remote sensing data. 
+    I have also worked on oil and gas asset integrity solutions - 
     leveraging Ultrasonic, EMAT, and MFL technologies for Oil and Gas In-line inspection, optical character recognition for a medical facility, 
     2G/3G/4G telecommunications engineering, and academic research in unmanned autonomous aerial vehicles.
     
